# open-ear-trainer

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CURRICULUM_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  Procfile  QUICK_START_CURRICULUM.md  README-LOCAL-TESTING.md  README.md  ROADMAP.md  TESTING.md  deploy.py  env.development.example  env.example  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test-local.sh  test-railway.sh
.github/workflows/: backend-deploy.yml  deploy.yml  test.yml
backend/api_app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api_app/management/commands/: seed_curriculum.py
backend/api_app/migrations/: 0001_initial.py
backend/audio_app/: __init__.py  synthesizer.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/exercises/: __init__.py
backend/exercises/base/: __init__.py  chord_exercise.py  exercise.py  interval_exercise.py  metadata.py
backend/exercises/level1/: __init__.py  combined_intervals_melodic.py  direction_exercises.py  interval_recognition.py  perfect_intervals_harmonic.py  perfect_intervals_melodic.py  thirds_octave_harmonic.py  tonal_center_exercises.py
backend/exercises/level2/: __init__.py  triad_exercises.py
backend/music_app/: __init__.py  chords.py  notes.py  scales.py
backend/tests/: conftest.py  test_basic.py
backend/tests/fixtures/: README.md
backend/tests/fixtures/chapters/: sample_chapters.json
backend/tests/fixtures/exercises/: sample_exercises.json
backend/tests/integration/: test_api_contracts.py  test_exercise_workflow.py
backend/tests/test_api/: test_curriculum_views.py  test_serializers.py  test_views.py
backend/tests/test_audio/: test_soundfont_switching.py  test_synthesizer.py
backend/tests/test_exercises/: test_base_exercise.py  test_interval_exercises.py
backend/tests/test_structure/: test_chapters_lessons.py
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf
docker/scripts/: build.sh  cleanup.sh  deploy.sh
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: exercise-endpoints.spec.ts
e2e/tests/archived/: chapter-navigation.spec.ts
frontend/: Dockerfile.dev  README.md  jest.config.js  package-lock.json  package.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: App.tsx.html  index.html  index.tsx.html  setupProxy.js.html
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  setupProxy.js  setupTests.ts
frontend/src/__tests__/components/: AnswerOptions.test.tsx  App.test.tsx  ExerciseList.test.tsx  ExercisePlayer.test.tsx
frontend/src/__tests__/utils/: test-utils.tsx
frontend/src/components/: ChapterList.tsx  ExerciseList.tsx  LessonList.tsx
scripts/: ty-check.sh
